# arm-trustzone-hello-world

./: .gitignore  .gitmodules  Makefile  README.md
.cargo/: config
hello_world/: Cargo.toml  Makefile
proto/: build.rs
ta/: Cargo.toml  Makefile  build.rs  generate-ta.sh  user_ta_header_defines.h  uuid.txt
